--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,5 +20,5 @@
 </head>
 <body>
 <p>
-<h3>Welcome to Windchill File Server New Deployment!</H3>
+<h3>Welcome to Windchill File Server New Deployment using GitHub - DEMO!</H3>
 </body></html>
